Change cross browser gap issue from display flex to grid for make gap work for safari

--- a/css/bloopark-challenge.css
+++ b/css/bloopark-challenge.css
@@ -165,7 +165,7 @@ body{
 }
 /* button container */
 .button-container{
-    display:flex;
+    display:grid;
     flex-direction: column;    
     justify-content: center;    
     gap:15px;    
